--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-{{ count() }}
+<p>{{ count() }}</p>
+
+<p>{{ todos() | json }}</p>
+
+<p>{{ multipleCount() }}</p>
+
+<button (click)="increment()">increment</button>
